[package]
name = "stringpod"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Cache-friendly columnar storage for many small byte strings (FASTQ reads, qualities, names)."

[dependencies]
bstr = "1"
smallvec = "1.15.1"




[workspace.lints.clippy]
# I want it that way when I write it that way
if-not-else = "allow"
# Don't Panic - prevent panics from unwraps and unsafe slicing or indexing
string_slice = "warn"
indexing_slicing = "allow" # we do this 200+ times, and there's usually no recovering anyway.. 
unwrap_used = "deny"
panic = "allow"
todo = "warn"
unimplemented = "warn"
unreachable = "allow" # we use this to document invariants
get_unwrap = "warn"
unwrap_in_result = "allow"
# unchecked_time_subtraction = "warn" # pedantic
panic_in_result_fn = "allow" # we use panic to ensure invariants are being kept / uncover true bugs
# Optional - see post for caveats
# expect_used = "warn"
# arithmetic_side_effects = "warn"

# Don't Fail Silently - prevent dropped futures and swallowed errors
let_underscore_future = "warn"
let_underscore_must_use = "allow"
unused_result_ok = "warn"
map_err_ignore = "warn"
assertions_on_result_states = "warn"

# Don't Do Bad Async Stuff - prevent deadlocks and concurrency bugs
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
if_let_mutex = "warn"  # only relevant on editions before 2024
# large_futures = "warn" # pedantic

# Don't Do Unsafe Things with Memory
mem_forget = "warn"
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "allow"
unnecessary_safety_doc = "warn"
unnecessary_safety_comment = "warn"

# Don't Do Potentially Incorrect Things with Numbers
# float_cmp = "warn" pedantic
float_cmp_const = "warn"
lossy_float_literal = "warn"
# cast_sign_loss = "warn" pedantic
#invalid_upcast_comparisons = "warn" # pedantic
# Optional - these effectively force you to document numeric invariants
# cast_possible_wrap = "warn"
# cast_precision_loss = "warn"
# cast_possible_truncation = "warn"

# Don't Do Bad Things That are Easy to Avoid
rc_mutex = "warn"
debug_assert_with_mut_call = "warn"
# iter_not_returning_iterator = "warn" # pedantic
# expl_impl_clone_on_copy = "warn" # pedantic
infallible_try_from = "warn"
dbg_macro = "warn"

# Don't `allow` Your Way Around These Lints - every suppression must be
# a deliberate #[expect(..., reason = "…")] rather than a silent #[allow]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"

# manually apply the pedantic group
# from https://rust-lang.github.io/rust-clippy/stable/?groups=pedantic

assigning_clones = "deny"
bool_to_int_with_if = "deny"
borrow_as_ptr = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
checked_conversions = "deny"
cloned_instead_of_copied = "deny"
collapsible_else_if = "deny"
comparison_chain = "deny"
copy_iterator = "deny"
# decimal_bitwise_operands = "deny"
default_trait_access = "allow" #I like Default::default()
doc_broken_link = "deny"
doc_comment_double_space_linebreaks = "deny"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
# duration_suboptimal_units = "deny"
elidable_lifetime_names = "deny"
empty_enums = "deny"
enum_glob_use = "deny"
explicit_deref_methods = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
expl_impl_clone_on_copy = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
float_cmp = "deny"
fn_params_excessive_bools = "deny"
format_collect = "deny"
format_push_string = "deny"
from_iter_instead_of_collect = "deny"
if_not_else = "deny"
ignored_unit_patterns = "deny"
ignore_without_reason = "deny"
implicit_clone = "deny"
implicit_hasher = "deny"
inconsistent_struct_constructor = "deny"
index_refutable_slice = "deny"
inefficient_to_string = "deny"
inline_always = "deny"
into_iter_without_iter = "deny"
invalid_upcast_comparisons = "deny"
ip_constant = "deny"
items_after_statements = "deny"
iter_filter_is_ok = "deny"
iter_filter_is_some = "deny"
iter_not_returning_iterator = "deny"
iter_without_into_iter = "deny"
large_digit_groups = "deny"
large_futures = "deny"
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
linkedlist = "deny"
macro_use_imports = "deny"
manual_assert = "deny"
# manual_ilog2 = "deny"
manual_instant_elapsed = "deny"
manual_is_power_of_two = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
manual_midpoint = "deny"
manual_string_new = "allow" # I don't care about "".to_string vs String::new()
many_single_char_names = "deny"
map_unwrap_or = "deny"
match_bool = "deny"
match_same_arms = "deny"
match_wildcard_for_single_variants = "deny"
match_wild_err_arm = "deny"
maybe_infinite_iter = "deny"
mismatching_type_param_order = "deny"
missing_errors_doc = "allow" # idc
missing_fields_in_debug = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"
mut_mut = "deny"
naive_bytecount = "deny"
needless_bitwise_bool = "deny"
needless_continue = "deny"
needless_for_each = "deny"
needless_pass_by_value = "deny"
needless_raw_string_hashes = "deny"
no_effect_underscore_binding = "deny"
no_mangle_with_rust_abi = "deny"
non_std_lazy_statics = "deny"
option_as_ref_cloned = "deny"
option_option = "deny"
ptr_as_ptr = "deny"
ptr_cast_constness = "deny"
# ptr_offset_by_literal = "deny"
pub_underscore_fields = "deny"
range_minus_one = "deny"
range_plus_one = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "allow" # it's our style
ref_as_ptr = "deny"
ref_binding_to_reference = "deny"
ref_option = "deny"
ref_option_ref = "deny"
return_self_not_must_use = "deny"
same_functions_in_if_condition = "deny"
# same_length_and_capacity = "deny"
self_only_used_in_recursion = "deny"
semicolon_if_nothing_returned = "deny"
should_panic_without_expect = "deny"
similar_names = "deny"
single_char_pattern = "deny"
single_match_else = "allow" # that's my style.
stable_sort_primitive = "deny"
string_add_assign = "deny"
str_split_at_newline = "deny"
struct_excessive_bools = "allow"
struct_field_names = "deny"
too_many_lines = "allow"
transmute_ptr_to_ptr = "deny"
trivially_copy_pass_by_ref = "deny"
unchecked_time_subtraction = "deny"
unicode_not_nfc = "deny"
uninlined_format_args = "deny"
unnecessary_box_returns = "deny"
unnecessary_debug_formatting = "deny"
unnecessary_join = "deny"
unnecessary_literal_bound = "deny"
unnecessary_semicolon = "deny"
# unnecessary_trailing_comma = "deny"
unnecessary_wraps = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
unsafe_derive_deserialize = "deny"
unused_async = "deny"
unused_self = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
verbose_bit_mask = "deny"
wildcard_imports = "deny"
zero_sized_map_values = "deny"
